src/main/resources/public/styles.css
body {
    text-align: center;
    font-family: "Arial";
    margin:0px;
}
h1 {
    margin: 0px;
    font-size: 8vh;
}

#instructions {
    padding-top: 3vh;
    font-size: 2vh;
}

#result {
    height: 200px;
    overflow: auto; /* allows for scrolling */
    margin-left: 40vh;
    margin-right: 40vh;
    border-style: solid;
    border-color: #CCC;
    border-width: 1px;
    text-align: left;
    min-width: 400px;
}

#displayContents {
    height: 200px;
    overflow: auto;
    margin-left: 50vh;
    margin-right: 50vh;
    border-style: solid;
    border-color: #CCC;
    border-width: 1px;
    text-align: left;
    white-space: pre;
    margin-bottom: 20px;
}

#instructions h1 {
    font-size: 2vh;
}

#exampleInput {
    font-size: 2vh;
}
#title {
    box-shadow: 0px 0px 5px;
}

#fileinput {
    vertical-align: middle;
    display: inline-block;
    right: 50px;
    width: 400px;
    height: 30px;
    background-color: white;
    box-shadow: 1px 2px 3px #ededed;
    border: 1px solid #d8d8d8;
    position: relative;
    margin-bottom: 40px;
    border-radius: 5px;
}

input[type='file'] {
    opacity: 0;
    width: 400px;
    height: 30px;
    /*visibility: hidden; /* sets it to hidden */
}


#val {
    position: absolute;
    top: 0;
    left: 0;
    font-size: 3vh;
    text-indent: -70px;
    pointer-events: none;
    width: 400px;
    text-overflow: clip;
    display: block;
    overflow: hidden;
    line-height: 30px;
    border-radius: 5px;
}
#buttonSelect {
    cursor: pointer;
    display: block;
    width: 45px;
    background-color: white;
    height: 30px;
    color: black;
    position: absolute;
    right: -52.5px;
    top: -1;
    font-size: 2.5vh;
    line-height: 25px;
    text-align: center;
    border-radius: 5px;
    border: #CCC;
    border-style: solid;
    border-width: 1px;
    box-shadow: 1px 2px 3px #ededed;
    -webkit-transition: 100ms all;
    -moz-transition: 100ms all;
    transition: 100ms all;
    
}
#buttonSubmit {
    cursor: pointer;
    display: block;
    width: 90px;
    background-color: white;
    height: 30px;
    color: black;
    position: absolute;
    right: -150px;
    top: -1;
    font-size: 2.5vh;
    line-height: 30px;
    text-align: center;
    border: #CCC;
    border-style: solid;
    border-width: 1px;
    box-shadow: 1px 2px 3px #ededed;
    border-radius: 5px;
    -webkit-transition: 100ms all;
    -moz-transition: 100ms all;
    transition: 100ms all;
    
}

/* perhaps not the best way to handle buttons */
#buttonSubmit:hover {
    background-color: #CCC;
}
#buttonSelect:hover {
    background-color: #CCC;
}

